css/dataset.css
/* Move down content because we have a fixed navbar that is 50px tall */

body {
  padding-top: 50px;
  padding-bottom: 20px;
}
.section-heading > a{
  color: #333333;
}

.navbar-collapse {
  width: 75%;
}

.navbar-inverse .navbar-nav > li > a {
  color: #000000;
}

#top-menu {
  background-color: #DADADA;
  border: none;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-size: 1em;
}

#topnav-links > li > a:hover {
  color: #D72020;
}

#topnav-links > li > a.active:hover {
  color: #F55;
}

#main-content {
  padding-left: 0;
  padding-right: 0;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-size: 1em;
}

#page-heading {
  width: 100%;
  margin-right: 0;
  margin-left: 0;
  display: table;
}

.jumbotron {
  width: 100%;
  background: url('../imgs/grey_wash_wall.png') repeat center center;
  font-family: 'Raleway', sans-serif;
  color: #FFFFFF
  font-weight: 300;
  text-align: center;
}

#heading-text {
  display: table-cell;
  vertical-align: middle;
}

#heading-text > p {
  color: #FFFFFF;
}

#heading-text > p > a {
  color: inherit;
}

#heading-text > p.big-text {
  font-family: 'Roboto Slab'; 
  font-weight: 700; 
  font-size: 5em;
}

.lamem-text {
  color: #A31F34;
  text-shadow: 2px 2px #F7F7F7, -2px -2px 0 #F7F7F7, 2px -2px #F7F7F7, -2px 2px 0 #F7F7F7;
}

#side-nav > .btn-group-vertical > button {
  border: medium none;
  border-left: solid 1px;
  text-align: left;
  margin-left: 1.5em;
}

.active-link > a {
  color: #A31F34;
  text-decoration: underline;
  font-weight: bold;
}

.inactive-link > a{
  color: #000000;
}

div.center-cropped {
  width: 200px;
  height: 200px;
  overflow:hidden;
  position: relative;
}
div.center-cropped img {
  min-height: 100%;
  min-width: 100%;
  left: 50%;
  position: relative;
  transform: translateX(-50%);
  z-index: 1;
}

div.center-cropped .heatmap {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  opacity: 0.6;
  filter: alpha(opacity=60); /* For IE8 and earlier */
  display: none;
}

div.center-cropped:hover .heatmap {
  display: block;
}

div.center-cropped div.stat {
  position: absolute;
  left: 85%;
  right: 0%;
  bottom: 0;
  padding: 4px;
  height: 16px;
  line-height: 16px;
  text-align: center;
  overflow: hidden;
}
div.center-cropped div.blackbg {
  z-index: 2;
  background-color: #000;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  filter: alpha(opacity=50);
  opacity: 0.5;
}
div.center-cropped div.label {
  z-index: 3;
  color: white;
  padding-bottom: 16px;
}


#filter-menu{
  width: 100%;
  background-color: #4d4d4d;
}

#filter-menu.affix-top{
  z-index:10;
  height:50px;
  background-color: #4d4d4d;
  border:0;
  font-family: 'Raleway', sans-serif;
  font-weight:300;
  font-size:1em;
  color:#FFFFFF;
}

#filter-menu.affix{
  position: fixed;
  top:50px;
  z-index:10;
  background-color: #4d4d4d;
}

#filter-menu .navbar-collapse {
  background-color: #4d4d4d;
  font-family: 'Raleway', sans-serif;
  font-weight:300;
  font-size:1em;
  color:#FFFFFF;
  width: 100%;
  margin: 0px;
  padding-left: 20px;
}

#filter-menu .navbar-nav > li > a{
  color:#FFFFFF;
}

#filter-menu .navbar-nav > .navbar-text{
 color:#FFFFFF;
}
@media (max-width: 768px) {
  /* change things for smaller devices */
  #heading-text > p.big-text {
    font-size: 10vw;
  }

  .lamem-text {
    color: #A31F34;
    text-shadow: 1px 1px #F7F7F7, -1px -1px 0 #F7F7F7, 1px -1px #F7F7F7, -1px 1px 0 #F7F7F7;
  }

  div.center-cropped {
    width: 100px;
    height: 100px;
  }
  #filter-menu.affix .navbar-nav {
    padding-top: 90px;
  }
}

